# superlabel

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnnotationCanvas.tsx  ImageList.tsx  RightPanel.tsx  Toolbar.tsx
src/stores/: app.ts
src/types/: index.ts
src/utils/: coco.ts  dataYaml.ts  fs.ts  i18n.ts  modelPresets.ts  shapes.ts  workspaces.ts  yolo.ts
