[package]
name = "superlabel"
version = "0.1.0"
edition = "2021"

[lib]
name = "superlabel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "superlabel"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
