[package]
name = "superlabel"
version = "0.1.2"
edition = "2021"

[lib]
name = "superlabel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "superlabel"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-store = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tract-onnx = "0.23.0"
image = "0.25.10"
reqwest = { version = "0.12", features = ["stream"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
